<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.smapley.base.widget.LinearlayoutView
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/login_age"
        android:layout_marginRight="@dimen/login_age"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="80dp"
            android:src="@mipmap/login_logo" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@mipmap/login_form_bg"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_login"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout style="@style/login_item_layout">

                    <ImageView
                        android:layout_width="@dimen/login_icon"
                        android:layout_height="@dimen/login_icon"
                        android:src="@mipmap/login_phone" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="@dimen/login_icon"
                        android:src="@mipmap/icon_line_vertical" />

                    <EditText
                        android:id="@+id/login_phone"
                        style="@style/login_edit"
                        android:hint="@string/login_phone"
                        android:inputType="phone" />
                </LinearLayout>

                <LinearLayout style="@style/login_item_layout">

                    <ImageView
                        android:layout_width="@dimen/login_icon"
                        android:layout_height="@dimen/login_icon"
                        android:src="@mipmap/login_pass" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="@dimen/login_icon"
                        android:src="@mipmap/icon_line_vertical" />

                    <EditText
                        android:id="@+id/login_password"
                        style="@style/login_edit"
                        android:hint="@string/login_pass"
                        android:inputType="textPassword" />

                    <ImageView
                        android:id="@+id/login_show"
                        android:layout_width="@dimen/login_icon"
                        android:layout_height="@dimen/login_icon"
                        android:src="@mipmap/login_pass_close" />
                </LinearLayout>

                <LinearLayout
                    style="@style/login_item_layout"
                    android:layout_height="30dp"
                    android:background="@null">

                    <TextView
                        android:id="@+id/login_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_register"
                        android:textColor="@color/teal4"
                        android:textSize="@dimen/login_text" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/login_forget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_forget"
                        android:textColor="@color/black"
                        android:textSize="@dimen/login_text" />


                </LinearLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="@dimen/login_space"
                    android:background="@mipmap/login_bt_bg"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/login_text" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_agree"
                        android:textColor="@color/gray4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_agreement"
                        android:textColor="@color/blue4" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </com.smapley.base.widget.LinearlayoutView>
</LinearLayout>